<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_custom_item">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_source_currency"
            android:textSize="@dimen/text_size_full_text_currency"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/source_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_inside"
           />

        <EditText
            android:id="@+id/source_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_sum_source_currency"
            android:inputType="numberDecimal"
            android:layout_marginTop="@dimen/margin_custom_item"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_final_currency"
            android:textSize="@dimen/text_size_full_text_currency"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_inside"/>

        <Spinner
            android:id="@+id/final_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_inside"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sum_final_currency"
            android:textSize="@dimen/text_size_full_text_currency"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_inside"/>

        <TextView
            android:id="@+id/final_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_result"
            android:textSize="@dimen/text_size_final_text"
            android:layout_marginTop="@dimen/margin_custom_item"/>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:text="@string/text_ok"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>